# aether

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  versions.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  proto-check.yml  publish-npm.yml  publish-python.yml  release.yml  test.yml  version-check.yml
api/: go.mod  go.sum
api/proto/: aether.pb.go  aether.proto  aether_grpc.pb.go
docs/: admin-ui.md  aetherlite.md  agent-acl-integration.md  agentic-fabric-protocol-guide.md  audit_testing_guide.md  environment.md  extension-protocol.md  horizontal-scaling.md  load-balancer-setup.md  monitoring.md  on-behalf-of-acl-design.md  quickstart.md  specification.md  why-aether.md
scripts/: build-all.sh  compile_protos.sh  tag-release.sh  update-versions.py
sdk/go/: README.md  go.mod  go.sum
sdk/python-client/: README.md  example.py  example_async.py  pyproject.toml  requirements.txt
sdk/python-client/scitrera_aether_client/: __init__.py  _common.py  admin.py  admin_async.py  authority.py  authority_cache.py  client.py  client_async.py  exceptions.py  httpx_transport.py  metrics.py  proxy.py  proxy_terminator.py  requests_adapter.py  tunnel.py  types.py
sdk/python-client/scitrera_aether_client/echo_test/: __init__.py  echo_agent.py  echo_agent_async.py  echo_orchestrator.py
sdk/python-client/scitrera_aether_client/orchestrator/: __init__.py  multiprocess.py
sdk/python-client/scitrera_aether_client/proto/: aether_pb2.py  aether_pb2.pyi  aether_pb2_grpc.py
sdk/python-client/tests/: __init__.py  conftest.py  test_admin.py  test_authority.py  test_authority_cache.py  test_client.py  test_client_async.py  test_orchestrator.py  test_proxy.py  test_proxy_streaming.py  test_proxy_terminator.py  test_requests_adapter.py  test_tunnel.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
server/: .golangci.yml  Dockerfile  Dockerfile.aetherlite-dev  Dockerfile.aetherlite-prod  go.mod  go.sum
server/configs/: acl_model.conf  dev.yaml  (+5 more)
(+840 files in other folders)
